--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,15 @@ jobs:
 
       - name: Commit and Push changes
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
           git add guide.xml
-          git commit -m "Update guide.xml from workflow" || echo "No changes to commit"
-          git push
+          
+          if ! git diff --cached --quiet; then
+            git commit -m "Update guide.xml from workflow $(date +'%Y-%m-%d %H:%M:%S')"
+            git pull origin main --rebase || echo "No remote changes to pull"
+            git push origin main
+          else
+            echo "No changes detected, skipping commit."
+          fi
